NOBUG: bolded property names in app list + fixed r-button v-align CSS

--- a/src/app/applications/application-list/application-list.component.scss
+++ b/src/app/applications/application-list/application-list.component.scss
@@ -44,6 +44,9 @@
                 padding: 0.5rem 0.75rem;
                 width: 50%;
             }
+            .name {
+                font-weight: bold;
+            }
         }
     }
 }
